--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
         </ul>
       </header>
       <section>
-        <h3>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <h3>Welcome to the Raspi Yaesu FT 817 Contoller Pages.</h3>
+
+		  <p>
+		  In the next days this website will contain more and more content on the raspberry pi interface
+		  to control the Yaesu FT 817. Stay tuned...
+		  </p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
